--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0",
-    "validator": "^13.12.0"
+    "mysql2": "^3.12.0"
   }
 }
