--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file=.env --watch index.js"
+    "start": "node --env-file=.env --watch index.js"
   },
   "author": "",
   "license": "ISC",
