--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,8 @@
 {
     "rewrites": [
       { "source": "/", "destination": "index.html" },
-      { "source": "/home", "destination": "/home/home.html" }
+      { "source": "/home", "destination": "/home/home.html" },
+      {"source": "/auth", "destination": "/auth/index.html"}
     ]
   }
   
