--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,7 +2,8 @@
     "rewrites": [
       { "source": "/", "destination": "index.html" },
       { "source": "/home", "destination": "/home/index.html" },
-      {"source": "/auth", "destination": "/auth/index.html"}
+      {"source": "/auth", "destination": "/auth/index.html"},
+      {"source": "/add-event", "destination": "/add-event/index.html"}
     ]
   }
   
