--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,6 +4,7 @@
       { "source": "/home", "destination": "/home/index.html" },
       {"source": "/auth", "destination": "/auth/index.html"},
       {"source": "/add-event", "destination": "/add-event/index.html"}
+      {"source": "/tickets", "destination": "/tickets/index.html"}
     ]
   }
   
